--- a/src/components/ChatMessage/ChatMessage.css
+++ b/src/components/ChatMessage/ChatMessage.css
@@ -4,7 +4,7 @@
   max-width: 70%;
 }
 .message-content {
-  padding: 1rem;
+  text-align: left;
   border-radius: 8px;
   font-size: 14px;
   line-height: 17px;
